Question5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: question5-ingress
 annotations:
   kubernetes.io/ingress.class: kong
spec:
 rules:
 - http:
     paths:
     - path: /v1/hello
       pathType: Prefix
       backend:
         service:
           name: q4
           port:
             number: 80
     - path: /v1/tasks/task
       pathType: Prefix
       backend:
         service:
           name: task
           port:
             number: 80
